# AgoraDealsNFT

./: .gitignore  README.md  another_guide.md  cleanup.sh  code1.md  debug_seed.js  devnet-testing-guide.md  local_validator_guide.md
backend/: .env  .env.example  README.md  README_TESTS.md  errors.txt  errors2.txt  errors3.txt  fix-all-types.js  fix-return-statements.py  fix-types.sh  package-lock.json  package.json  vitest.config.ts
frontend/: .env  .env.local.example  App.tsx  README.md  index.css  index.html  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  (+2 more)
program/programs/discount-platform/: Cargo.toml
program/programs/discount-platform/src/: errors.rs  events.rs  lib.rs
program/programs/discount-platform/src/accounts/: badge.rs  comment.rs  external_deal.rs  location.rs  merchant.rs  mod.rs  promotion.rs  rating.rs
program/programs/discount-platform/src/instructions/: add_comment.rs  buy_listing.rs  create_promotion.rs  initialize.rs  like_comment.rs  list_for_sale.rs  mint_badge.rs  mint_coupon.rs  mod.rs  rate_promotion.rs  redeem_coupon.rs  redemption_tickets.rs  register_merchant.rs  transfer_coupon.rs  update_external_deal.rs
program/programs/discount-platform/src/state/: badge.rs  merchant.rs  mod.rs
smart-contract/: Cargo.toml
smart-contract/programs/discount-platform/src/accounts/: coupon.rs
smart-contract/programs/discount-platform/src/instructions/: initialize.rs  list_for_sale.rs  mint_coupon.rs  redeem_coupon.rs  register_merchant.rs  transfer_coupon.rs
smart-contract/tests/: my_program.rs
(+151 files in other folders)
