[workspace]
members = [
    "programs/*",
    "tests"
]
resolver = "2"

[workspace.dependencies]
indexmap = "=2.6.0"
hashbrown = "=0.14.5"

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
panic = "abort"
overflow-checks = true
incremental = true

[profile.release.build-override]
opt-level = 3
incremental = true
codegen-units = 1