[package]
name = "discount-platform"
version = "1.0.0"
description = "Web3-powered discount marketplace with NFT coupons"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "discount_platform"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.0", features = ["init-if-needed"] }
anchor-spl = "0.30.0"
mpl-token-metadata = "4.1.2"